Produce two jars, for spark and for a standard usage.